--- a/index.html
+++ b/index.html
@@ -59,10 +59,52 @@
     <div class='inhalt'>
       <section class='about' id='about'>
         <div class="quotes">
-          <div><blockquote style="margin: 2em 0;">This is truly SXSW - and an amazing example of how famous TV Formats can find their way into startup events</blockquote><div>Martina Richter (HMR)</div></div>
-          <div><blockquote style="margin: 2em 0;">The Interactive Dating Game perfectly fits the unique SXSW atmosphere - it's entertaining, it's sexy and it's unpredictable.</blockquote> <div>Claudia Pelzer (Ufa Lab)</div></div>
-          <div><blockquote style="margin: 0em 0;">Mit dem Interactive Dating Game hat sich NRW bei der SXSW von seiner besten Seite gezeigt: Selbstbewusst, heiter, fantasievoll, vielfältig, erfolgreich und weltoffen. Die Macher haben rund um das Format ein dichtes Netz an guten Kontakten geknüpft. Das Interactive Dating Game war ein echter Publikumsmagnet für das German Haus in Austin.</blockquote> <div>Claudia Nussbauer (MWEIMH)</div></div>
-          <div><blockquote style="margin: 1.5em 0;">Finally an event beyond common pitches that focuses on the core of it all: personal talks. It's awesome. It's real fun. A big thank you to the Interactive Dating Game Team and the sponsors who provided C3S with some generous prizes!</blockquote> <div>Wolfang Senges (c3S)</div></div> 
+          <div>
+            <div class="dottedline"><h1>There you go!</h1></div>
+            <h2>
+              Take three ambitious startups, let them pitch to one successful VC,
+              hidden behind a wall ... and watch the magic happen!
+            </h2>
+            <h2>
+              The Interactive Dating Game has it all:
+              wit, laughter, entertainment - and a matchmaking like you´ve never experienced before.
+            </h2>
+            <h2>
+              <strong>Join us, ask yourself "Who is your Herzblatt?" and enjoy the show.</strong>
+            </h2>
+          </div>
+          <div>
+            <div class="dottedline"><h1>Testimonial</h1></div>
+            <blockquote style="margin: 2em 0;">
+              This is truly SXSW - and an amazing example of how famous TV Formats can find their way into startup events
+            </blockquote>
+            <div style="text-align: right;">Martina Richter (HMR)</div>
+          </div>
+          <div>
+            <div class="dottedline"><h1>Testimonial</h1></div>
+            <blockquote style="margin: 2em 0;">
+              The Interactive Dating Game perfectly fits the unique SXSW atmosphere - it's entertaining, it's sexy and it's unpredictable.
+            </blockquote>
+            <div style="text-align: right;">Claudia Pelzer (Ufa Lab)</div>
+          </div>
+          <div>
+            <div class="dottedline"><h1>Testimonial</h1></div>
+            <blockquote style="margin: 0em 0;">
+              Mit dem Interactive Dating Game hat sich NRW bei der SXSW von seiner besten Seite gezeigt:
+              Selbstbewusst, heiter, fantasievoll, vielfältig, erfolgreich und weltoffen.
+              Die Macher haben rund um das Format ein dichtes Netz an guten Kontakten geknüpft.
+              Das Interactive Dating Game war ein echter Publikumsmagnet für das German Haus in Austin.
+            </blockquote>
+            <div style="text-align: right;">Claudia Nussbauer (MWEIMH)</div>
+          </div>
+          <div>
+            <div class="dottedline"><h1>Testimonial</h1></div>
+            <blockquote style="margin: 1.5em 0;">
+              Finally an event beyond common pitches that focuses on the core of it all: personal talks.
+              It's awesome. It's real fun. A big thank you to the Interactive Dating Game Team and the sponsors who provided C3S with some generous prizes!
+            </blockquote>
+            <div style="text-align: right;">Wolfang Senges (c3S)</div>
+          </div> 
         </div>
 
         <div class="dottedline"><h1>About</h1></div>
