--- a/index.html
+++ b/index.html
@@ -171,32 +171,69 @@
         <p>
           <ul class='talks candidates'>
             <li>
-              <div class='name'>The Investor</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/investor2.png')"></div>
+              <div class='name'>Christian Weisbrodt - <a href="http://www.microsoftventures.com" target="_blank">Microsoft Ventures<a></div>
+              <div class='avatar' style="background-image: url('images/candidates/cweisbro_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/C_Weisbrodt' target='_blank'>@C_Weisbrodt</a>
+              </div>
+              <div class='info'>
+                The Microsoft Ventures Accelerator in Berlin is an immersive program aimed at squeezing 
+                the countdown to launch. For 4 months, you’ll get strong mentoring, technical guidance 
+                and connections to other startups - and the we take aboslutely equity, the program is 
+                completely free. 
+              </div>
+<!--               <div class='name'>The Investor</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/investor2.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
             <li>
-              <div class='name'>Awesome Founder</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder1.png')"></div>
+              <div class='name'>Tim Betzin</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder4.png')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/bubble_events' target='_blank'>@bubble_events</a>
+              </div>
+              <div class='info'>
+                bubbleApp zeigt dir Live auf einer Karte an, was gerade spannendes um dich herum passiert. 
+                Jeder Nutzer kann dabei Kommentare oder Fotos auf die Karte posten und je nachdem wie 
+                andere Nutzer reagieren, ändert sich die Größe und Auffälligkeit der Posts. 
+              </div> 
+<!--               <div class='name'>Awesome Founder</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder1.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
             <li>
-              <div class='name'>Another Founder</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder2.png')"></div>
+              <div class='name'>Dirk van Haag - <a href="http://beardforceone.com" target='_blank'>Beard Force One</a></div>
+              <div class='avatar' style="background-image: url('images/candidates/dirk_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/thebeardforce' target='_blank'>@thebeardforce</a>
+              </div>
+              <div class='info'>
+                
+              </div>
+<!--               <div class='name'>Another Founder</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder2.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
             <li>
-              <div class='name'>And You?</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder3.png')"></div>
+              <div class='name'>Athenea & Simon - <a href="http://wearecity.de" target='_blank'>wearecity</a></div>
+              <div class='avatar' style="background-image: url('images/candidates/wearecity_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/WEARECITYtweet' target='_blank'>@WEARECITYtweet</a>
+              </div>
+              <div class='info'>
+                Dein persönlicher Cityguide für Köln! Auf WEARECITY findest Du authentische Tipps von Einheimischen, die Deine Interessen teilen. Ihre Empfehlungen sind unverfälscht und sie teilen mit Dir ausschließlich ihre absoluten Lieblingsorte.
+              </div>
+<!--               <div class='name'></div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder3.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -216,37 +253,85 @@
         <p>
           <ul class='talks candidates'>
             <li>
-              <div class='name'>Tech Expert</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/cto.png')"></div>
+              <div class='name'>Roland Gude</div>
+              <div class='avatar' style="background-image: url('images/candidates/rgude_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/rjtg_' target='_blank'>@rjtg_</a>
+              </div>
+              <div class='info'>
+                Life long learner. Effectiveness is the measure of truth.
+              </div>
+<!--               <div class='name'>Tech Expert</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/cto.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
             <li>
-              <div class='name'>Startup BIZ</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder4.png')"></div>
+              <div class='name'>Verena von Stromberg - <a href="http://meisterclass.com" target="_blank">meisterclass</a></div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder1.png')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/ldannenberg' target='_blank'>@ldannenberg</a>
+              </div>
+              <div class='info'>
+                MEISTERCLASS ist eine online Lernplattform im Do-It-Yourself Bereich und 
+                die beiden Gründerinnen werden über das Produkt, einen oft unterschätzten 
+                Markt und die Hochs und Tiefs einen gebootstrappten Startups sprechen. 
+              </div>
+            </li>
+            <li>
+              <div class='name'>Kristina Wilms - Arya</div>
+              <div class='avatar' style="background-image: url('images/candidates/kwilms_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/aryalog' target='_blank'>@aryalog</a>
+              </div>
+              <div class='info'>
+                Arya App offers and intuitive and discrete solution to reflect on your 
+                behaviour patterns and through that Arya App supports the emergence of a 
+                more self-reliant and self-determined therapy of mental illnesses. 
+              </div>
+<!--               <div class='name'>Startup BIZ</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder4.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
             <li>
-              <div class='name'>Hipster COM</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder5.png')"></div>
+              <div class='name'>Eva Mohr - <a href="http://allthatiwant.com">Allthatiwant</a></div>
+              <div class='avatar' style="background-image: url('images/candidates/evamohr_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/all_thatiwant' target='_blank'>@all_thatiwant</a>
+              </div>
+              <div class='info'>
+                Online Plattform für Mode und urbane Fahrradkultur und bei uns geht es lediglich darum: Wie sehe ich gut auf dem Rad aus? 
+              </div>
+<!--               <div class='name'>Nina Blasberg - <a href="http://onbelle.de" target="_blank">onbelle</a></div>
+              <div class='avatar' style="background-image: url('images/candidates/tbetzin_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/onbelle_' target='_blank'>@onbelle_</a>
+              </div>
+              <div class='info'>
+                onbelle erfüllt den Traum aller Frauen: Einen unendlichen Kleiderschrank. Wir bieten 
+                Deutschland's erste Fashion Flatrate.  
+              </div>  -->
+<!--               <div class='name'>Hipster COM</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder5.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
-            <li>
+<!--             <li>
+
               <div class='name'>Your Idea?</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/founder6.png')"></div>
-              <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
+              <div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
-              </div>-->
-            </li>
+              </div>
+            </li> -->
           </ul>
         </p>
         <!--
@@ -261,24 +346,57 @@
         <p>
           <ul class='talks candidates'>
             <li>
-              <div class='name'>Awesome Founder</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder.png')"></div>
+              <div class='name'>Dr. Tatiana Chapovalova - <a href="http://skillndeal.com" target="_blank">skillndeal</a></div>
+              <div class='avatar' style="background-image: url('images/candidates/tatiana_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/TChapovalova' target='_blank'>@TChapovalova</a>
+              </div>
+              <div class='info'>  
+                Skilldeal is an online community marketplace for creative people with 
+                enthusiasm and passion who want to share their knowledge and skills with 
+                others interested people in the form of courses or workshops. 
+              </div>
+<!--               <div class='name'>Awesome Founder</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/founder.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
             <li>
-              <div class='name'>Investor I</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/investor1.png')"></div>
+              <div class='name'>Matthias Hornberger - <a href="http://kizoo.com" target="_blank">KIZOO</a></div>
+              <div class='avatar' style="background-image: url('images/candidates/mhorn_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/mho1960' target='_blank'>@mho1960</a>
+                <br \>
+                <a href='http://twitter.com/kizoo' target='_blank'>@kizoo</a>
+              </div>
+              <div class='info'>
+                KIZOO hilft jungen Startup-Teams zu wachsen. Unser Schwerpunkt 
+                liegt auf Seed- und Frühphasen-Finanzierungen von SaaS, Internet & Mobile Services 
+                und Social Applications.
+              </div> 
+<!--               <div class='name'>Investor I</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/investor1.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
               </div>-->
             </li>
             <li>
-              <div class='name'>Investor II</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/investor2.png')"></div>
+              <div class='name'>Till Hardy - <a href="http://medien.nrw.de" target="_blank">Mediencluster NRW</a></div>
+              <div class='avatar' style="background-image: url('images/candidates/thardy_sq.jpg')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/tillhardy' target='_blank'>@tillhardy</a>
+              </div>
+              <div class='info'>
+                Das Mediencluster NRW ist der Anlaufpunkt für die digitale Medienwirtschaft 
+                in NRW. Wir vernetzen, beraten und informieren zu Förderung und 
+                Finanzierung und begleiten Unternehmen bei Ansiedlung, Gründung und 
+                Entwicklung digitaler Geschäftsmodelle. 
+              </div> 
+<!--               <div class='name'>Investor II</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/investor2.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
