--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               It's awesome. It's real fun. A big thank you to the Interactive Dating Game Team and the sponsors who provided C3S with some generous prizes!
             </blockquote>
             <div style="text-align: right;">Wolfang Senges (c3S)</div>
-          </div> 
+          </div>
         </div>
 
         <div class="dottedline"><h1>About</h1></div>
@@ -177,10 +177,10 @@
                 <a href='http://twitter.com/C_Weisbrodt' target='_blank'>@C_Weisbrodt</a>
               </div>
               <div class='info'>
-                The Microsoft Ventures Accelerator in Berlin is an immersive program aimed at squeezing 
-                the countdown to launch. For 4 months, you’ll get strong mentoring, technical guidance 
-                and connections to other startups - and the we take aboslutely equity, the program is 
-                completely free. 
+                The Microsoft Ventures Accelerator in Berlin is an immersive program aimed at squeezing
+                the countdown to launch. For 4 months, you’ll get strong mentoring, technical guidance
+                and connections to other startups - and the we take aboslutely equity, the program is
+                completely free.
               </div>
 <!--               <div class='name'>The Investor</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/investor2.png')"></div> -->
@@ -196,10 +196,10 @@
                 <a href='http://twitter.com/bubble_events' target='_blank'>@bubble_events</a>
               </div>
               <div class='info'>
-                bubbleApp zeigt dir Live auf einer Karte an, was gerade spannendes um dich herum passiert. 
-                Jeder Nutzer kann dabei Kommentare oder Fotos auf die Karte posten und je nachdem wie 
-                andere Nutzer reagieren, ändert sich die Größe und Auffälligkeit der Posts. 
-              </div> 
+                bubbleApp zeigt dir Live auf einer Karte an, was gerade spannendes um dich herum passiert.
+                Jeder Nutzer kann dabei Kommentare oder Fotos auf die Karte posten und je nachdem wie
+                andere Nutzer reagieren, ändert sich die Größe und Auffälligkeit der Posts.
+              </div>
 <!--               <div class='name'>Awesome Founder</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/founder1.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
@@ -214,7 +214,7 @@
                 <a href='http://twitter.com/thebeardforce' target='_blank'>@thebeardforce</a>
               </div>
               <div class='info'>
-                
+
               </div>
 <!--               <div class='name'>Another Founder</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/founder2.png')"></div> -->
@@ -275,9 +275,9 @@
                 <a href='http://twitter.com/ldannenberg' target='_blank'>@ldannenberg</a>
               </div>
               <div class='info'>
-                MEISTERCLASS ist eine online Lernplattform im Do-It-Yourself Bereich und 
-                die beiden Gründerinnen werden über das Produkt, einen oft unterschätzten 
-                Markt und die Hochs und Tiefs einen gebootstrappten Startups sprechen. 
+                MEISTERCLASS ist eine online Lernplattform im Do-It-Yourself Bereich und
+                die beiden Gründerinnen werden über das Produkt, einen oft unterschätzten
+                Markt und die Hochs und Tiefs einen gebootstrappten Startups sprechen.
               </div>
             </li>
             <li>
@@ -287,9 +287,9 @@
                 <a href='http://twitter.com/aryalog' target='_blank'>@aryalog</a>
               </div>
               <div class='info'>
-                Arya App offers and intuitive and discrete solution to reflect on your 
-                behaviour patterns and through that Arya App supports the emergence of a 
-                more self-reliant and self-determined therapy of mental illnesses. 
+                Arya App offers and intuitive and discrete solution to reflect on your
+                behaviour patterns and through that Arya App supports the emergence of a
+                more self-reliant and self-determined therapy of mental illnesses.
               </div>
 <!--               <div class='name'>Startup BIZ</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/founder4.png')"></div> -->
@@ -305,7 +305,7 @@
                 <a href='http://twitter.com/all_thatiwant' target='_blank'>@all_thatiwant</a>
               </div>
               <div class='info'>
-                Online Plattform für Mode und urbane Fahrradkultur und bei uns geht es lediglich darum: Wie sehe ich gut auf dem Rad aus? 
+                Online Plattform für Mode und urbane Fahrradkultur und bei uns geht es lediglich darum: Wie sehe ich gut auf dem Rad aus?
               </div>
 <!--               <div class='name'>Nina Blasberg - <a href="http://onbelle.de" target="_blank">onbelle</a></div>
               <div class='avatar' style="background-image: url('images/candidates/tbetzin_sq.jpg')"></div>
@@ -313,8 +313,8 @@
                 <a href='http://twitter.com/onbelle_' target='_blank'>@onbelle_</a>
               </div>
               <div class='info'>
-                onbelle erfüllt den Traum aller Frauen: Einen unendlichen Kleiderschrank. Wir bieten 
-                Deutschland's erste Fashion Flatrate.  
+                onbelle erfüllt den Traum aller Frauen: Einen unendlichen Kleiderschrank. Wir bieten
+                Deutschland's erste Fashion Flatrate.
               </div>  -->
 <!--               <div class='name'>Hipster COM</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/founder5.png')"></div> -->
@@ -351,10 +351,10 @@
               <div class='handle'>
                 <a href='http://twitter.com/TChapovalova' target='_blank'>@TChapovalova</a>
               </div>
-              <div class='info'>  
-                Skilldeal is an online community marketplace for creative people with 
-                enthusiasm and passion who want to share their knowledge and skills with 
-                others interested people in the form of courses or workshops. 
+              <div class='info'>
+                Skilldeal is an online community marketplace for creative people with
+                enthusiasm and passion who want to share their knowledge and skills with
+                others interested people in the form of courses or workshops.
               </div>
 <!--               <div class='name'>Awesome Founder</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/founder.png')"></div> -->
@@ -372,10 +372,10 @@
                 <a href='http://twitter.com/kizoo' target='_blank'>@kizoo</a>
               </div>
               <div class='info'>
-                KIZOO hilft jungen Startup-Teams zu wachsen. Unser Schwerpunkt 
-                liegt auf Seed- und Frühphasen-Finanzierungen von SaaS, Internet & Mobile Services 
+                KIZOO hilft jungen Startup-Teams zu wachsen. Unser Schwerpunkt
+                liegt auf Seed- und Frühphasen-Finanzierungen von SaaS, Internet & Mobile Services
                 und Social Applications.
-              </div> 
+              </div>
 <!--               <div class='name'>Investor I</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/investor1.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
@@ -390,11 +390,11 @@
                 <a href='http://twitter.com/tillhardy' target='_blank'>@tillhardy</a>
               </div>
               <div class='info'>
-                Das Mediencluster NRW ist der Anlaufpunkt für die digitale Medienwirtschaft 
-                in NRW. Wir vernetzen, beraten und informieren zu Förderung und 
-                Finanzierung und begleiten Unternehmen bei Ansiedlung, Gründung und 
-                Entwicklung digitaler Geschäftsmodelle. 
-              </div> 
+                Das Mediencluster NRW ist der Anlaufpunkt für die digitale Medienwirtschaft
+                in NRW. Wir vernetzen, beraten und informieren zu Förderung und
+                Finanzierung und begleiten Unternehmen bei Ansiedlung, Gründung und
+                Entwicklung digitaler Geschäftsmodelle.
+              </div>
 <!--               <div class='name'>Investor II</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/investor2.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
@@ -403,8 +403,18 @@
               </div>-->
             </li>
             <li>
-              <div class='name'>Investor III</div>
+              <div class='name'>Gisele Legionnet</div>
               <div class='avatar' style="background-image: url('images/people-placeholder/investor3.png')"></div>
+              <div class='handle'>
+                <a href='http://twitter.com/GiseleL' target='_blank'>@GiseleL</a>
+              </div>
+              <div class='info'>
+                Mobile- and users first ist mein Motto. Bei Handelsblatt, Bertelsmann und Vodafone Group
+                fuer Design und Innovation verantwortlich.
+                In Amsterdam Absolventin von THNK Masterclass of Creative Leadership.
+              </div>
+<!--               <div class='name'>Investor III</div>
+              <div class='avatar' style="background-image: url('images/people-placeholder/investor3.png')"></div> -->
               <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
@@ -448,7 +458,7 @@
         <p><strong>Tickets for the <a href='http://piratesummit.com/' target='_blank'>European Pirate Summit</a> worth 700$</strong>The European Pirate Summit (August 2014 in Cologne Germany) - the craziest startup and VC conference</p>
         <p><strong><a href='https://twitter.com/rackspace' target='_blank'>Rackspace</a> Startup cloud products worth 3,000$ </strong>Rackspace - Build Scalable Websites & Apps</p>
         <p><strong>Webdevelopment coding power and support by <a href='https://twitter.com/railslove' target='_blank'>Railslove</a> worth 2,000$ </strong>We love building web applications - need help?</p>
-       <p><strong>An image or company or product trailer powered by <a href='http://ufa-lab.com' target='_blank'>Ufa Lab</a> worth 10,000$ </strong>UFA LAB is digital production unit of UFA and content lab for innovative, transmedia storytelling</p> 
+       <p><strong>An image or company or product trailer powered by <a href='http://ufa-lab.com' target='_blank'>Ufa Lab</a> worth 10,000$ </strong>UFA LAB is digital production unit of UFA and content lab for innovative, transmedia storytelling</p>
         <ul class="sponsors">
           <li><a href="http://ufa-lab.com"><img width="258px" src="images/supporter/ufalab.png" /></a></li>
           <li><a href="http://startplatz.de"><img width="258px" src="images/supporter/startplatz.jpeg" /></a></li>
@@ -753,7 +763,7 @@
         <a href='mailto:jan@interactive-cologne.com' target='_blank'>Questions?</a><br/><br/>
         Proudly brought to you by <a href='http://railslove.com' target='_blank'><img src="/images/railslove-logo.png" alt="railslove" style="vertical-align: middle; padding: 0 5px 10px 5px;" /></a> &amp; <a href='http://interactive-cologne.com' target='_blank'><img src="/images/interactive-cologne.png" alt="Interactive Cologne" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a><br/><br/>
         Supported by
-        
+
         <a href="http://www.creative.nrw.de/" target="_blank"><img src="/images/creative-nrw.png" alt="CREATIVE NRW" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a> &amp;
         <a href="http://www.supr.com/" target="_blank"><img src="/images/supr.png" alt="supr.com" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a>
         <br /><br/>
