pimped images a bit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class='blender'></div>
       <div class='grid'></div>
       <div class='content'>
-        <img alt='Dating Game' src='./images/logo.png'>
+        <img alt='Dating Game' src='./images/logo.png' width="100%">
         <p class='tagline'>
           Startups meet VCs meet CTOs
         </p>
@@ -104,7 +104,7 @@
         </ul>
         <p>Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
         Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. A direct analog synthesis (DAS) of efficiency, humor and entertainment.</p>
-        <iframe width="760" height="400" src="http://www.youtube.com/embed/DJ99O_QS1-k" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="400" src="http://www.youtube.com/embed/DJ99O_QS1-k" frameborder="0" allowfullscreen></iframe>
         <img width="380" alt='Dating Game @ SXSW 2014' src='images/sxsw-2014/IMG_20140310_133419.jpg'>
         <img width="380" alt='Dating Game @ SXSW 2014' src='images/sxsw-2014/IMG_20140310_135637.jpg'>
       </section>
@@ -130,7 +130,7 @@
           </div>
           <div class="center"><a href="http://toaberlin.com/dating-game/">You're a startup or investor? Join the dating game on stage!</a><br/>          
           <br/>
-          <img alt='TOA Dating Game' src='images/toa-dating-game.png'>
+          <img alt='TOA Dating Game' src='images/toa-dating-game.png' width="100%">
       </section>
       <section class='talks' id='candidates'>
         <div class='dottedline'><h1>Candidates</h1></div>
