--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class='blender'></div>
       <div class='grid'></div>
       <div class='content'>
-        <img alt='Dating Game' src='./images/logo.png' width="100%">
+        <img alt='Dating Game' src='./images/logo.png'>
         <p class='tagline'>
           Startups meet VCs meet CTOs
         </p>
