--- a/index.html
+++ b/index.html
@@ -12,15 +12,8 @@
   </head>
   <body>
     <div class='banner'>
-      <a href="https://www.facebook.com/events/826201740725867/" target='_blank'>
       <img src='images/banner_only_toa.png'/>
-      </a>
     </div>
-    <div class="tickets">
-<!--       <a href="http://2014.interactive-cologne.com/tickets">
-        <img src="./images/ic14-lay-tickets-btn.png" alt="Tickets"/>
-      </a>
- -->    </div>
     <header>
       <div id='particles_wrapper'>
         <div id='particles'></div>
@@ -28,7 +21,7 @@
       <div class='blender'></div>
       <div class='grid'></div>
       <div class='content'>
-        <img alt='Dating Game' src='./images/logo.png'>
+        <img alt='Dating Game' src='./images/logo.png' class="dg-logo">
         <p class='tagline'>
           Startups meet VCs meet CTOs
         </p>
@@ -125,8 +118,8 @@
             <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:450px;width:100%;"><div id="gmap_canvas" style="height:450px;width:100%;"></div><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">www.map-embed.com</a><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(52.49632477348401,13.466325862426743),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(52.49632477348401, 13.466325862426743)});infowindow = new google.maps.InfoWindow({content:"<b>Alte Teppichfabrik</b><br/>Alt-Stralau 4<br/>10245 Berlin" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
           </div>
           <br/>
-          <div class="center">I'm superexcited to see this on stage<br/>
-          <a href="https://www.facebook.com/events/826201740725867/"><img src="images/facebook_button.png" /></a>
+          <div class="center"><strong>I'm superexcited to see this on stage! Join TOA!</strong><br/>
+          <a href="http://toaberlin.com/dating-game/"><img src="images/toa-mini.png" /></a>
           </div>
           <div class="center"><a href="http://toaberlin.com/dating-game/">You're a startup or investor? Join the dating game on stage!</a><br/>          
           <br/>
@@ -305,7 +298,7 @@
         <div class='dottedline'></div>
         <div class="center">
           This is the best thing since "The Hoff" brought down the wall. I'm in!<br/>
-          <a href="https://www.facebook.com/events/826201740725867/"><img src="images/facebook_button.png" /></a>
+          <a href="http://toaberlin.com/dating-game/"><img src="images/toa-mini.png" /></a>
         </div>
         <div class="center"><a href="http://toaberlin.com/dating-game/">You're a startup or investor? Join the dating game on stage!</a><br/>          
       </section>
@@ -357,7 +350,7 @@
         <div class='dottedline'></div>
         <div class="center">
           Get honest insights @ TOA<br/>
-          <a href="https://www.facebook.com/events/826201740725867/"><img src="images/facebook_button.png" /></a>
+          <a href="http://toaberlin.com/dating-game/"><img src="images/toa-mini.png" /></a>
         </div>
         <div class='dottedline'><h1>Past Candidates</h1></div>
         <p>
