added mike butcher

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class='banner'>
-      <img src='images/banner_only_toa.png'/>
+      <img src='images/banner-toa.png'/>
     </div>
     <header>
       <div id='particles_wrapper'>
@@ -276,6 +276,20 @@
         <p>
           <ul class='talks'>
             <li>
+              <div class='name'>Editor-At-Large</div>
+              <div class='avatar' style="background-image: url('images/people/mikeb.png')"></div>
+              <div class='name'>Mike Butcher</div>
+              <div class='handle'>
+                <a href='http://twitter.com/mikebutcher' target='_blank'>@mikebutcher</a>
+              </div>
+              <!-- <div class='topic'>Shieeeet</div> -->
+            </li>
+          </ul>
+        </p>
+        <div class='dottedline'><h1>Brought to you by</h1></div>
+        <p>
+          <ul class='talks'>
+            <li>
               <div class='name'>Jack of all trades</div>
               <div class='avatar' style="background-image: url('images/people/koos.jpg')"></div>
               <div class='name'>Jan Kus</div>
@@ -294,7 +308,7 @@
               <div class='topic'>The empathic brain</div>
             </li>
           </ul>
-        </p>
+        </p>        
         <div class='dottedline'></div>
         <div class="center">
           This is the best thing since "The Hoff" brought down the wall. I'm in!<br/>
@@ -591,7 +605,7 @@
       <section class='copyright'>
         <div class='dottedline'></div>
         <a href='mailto:jan@interactive-cologne.com' target='_blank'>Questions?</a><br/><br/>
-        Proudly brought to you by <a href='http://railslove.com' target='_blank'><img src="images/railslove-logo.png" alt="railslove" style="vertical-align: middle; padding: 0 5px 10px 5px;" /></a> &amp; <a href='http://hack.institute' target='_blank'><img src="images/hack-institute-logo.png" alt="Interactive Cologne" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a><br/><br/>
+        Proudly brought to you by <a href='http://ufa-lab.com' target='_blank'><img src="images/ufa-lab-logo.png" alt="UFA Lab" style="vertical-align: middle; padding: 0 5px 10px 5px;" /></a> &amp; <a href='http://railslove.com' target='_blank'><img src="images/railslove-logo.png" alt="railslove" style="vertical-align: middle; padding: 0 5px 10px 5px;" /></a> &amp; <a href='http://hack.institute' target='_blank'><img src="images/hack-institute-logo.png" alt="Interactive Cologne" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a><br/><br/>
         Supported by
 
         <a href="http://www.creative.nrw.de/" target="_blank"><img src="images/creative-nrw.png" alt="CREATIVE NRW" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a> &amp;
