added claudia pelzer

--- a/index.html
+++ b/index.html
@@ -307,6 +307,15 @@
               </div>
               <div class='topic'>The empathic brain</div>
             </li>
+            <li>
+              <div class='name'>Jack's partner</div>
+              <div class='avatar' style="background-image: url('images/people/claudia.png')"></div>
+              <div class='name'>Claudia Pelzer</div>
+              <div class='handle'>
+                <a href='https://twitter.com/CrowdSourcingDE' target='_blank'>@CrowdSourcingDE</a>
+              </div>
+              <div class='topic'>The Crowdsourcer</div>
+            </li>
           </ul>
         </p>        
         <div class='dottedline'></div>
