--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class='next-dates-box'>
                 <div class='next-dates'>
                     <h2>Next Event</h2><p class='dotline'></p>
-                    <h3>July 16, 6 PM</h3>
+                    <h3>July 16, 4:45pm</h3>
                     <h3>Tech Open Air Berlin</h3>
                     <p>Alte Teppichfabrik, Berlin, Alt-Stralau 4, 10245 Berlin</p>
                     <p class='dotline'></p>
