--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="The Startup Dating Game - Startups meet VCs meet CTOs">
     <meta itemprop="description" content="Meet your CTO! Meet your Startup! Meet your VC! Take three ambitious startups, let them pitch to one successful VC, hidden behind a wall ... and watch the magic happen! The Interactive Dating Game has it all: wit, laughter, entertainment - and a matchmaking like you´ve never experienced before. Join us, ask yourself /"Who is your Herzblatt?/" and enjoy the show.">
-    <meta itemprop="image" content="https://interactivedatinggame.com/preview.png">
+    <meta itemprop="image" content="http://interactivedatinggame.com/preview.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
@@ -25,8 +25,8 @@
 
     <meta property="og:title" content="The Startup Dating Game - Startups meet VCs meet CTOs" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://interactivedatinggame.com/" />
-    <meta property="og:image" content="https://interactivedatinggame.com/preview.png" />
+    <meta property="og:url" content="http://interactivedatinggame.com/" />
+    <meta property="og:image" content="http://interactivedatinggame.com/preview.png" />
     <meta property="og:description" content="Meet your CTO! Meet your Startup! Meet your VC! Take three ambitious startups, let them pitch to one successful VC, hidden behind a wall ... and watch the magic happen! The Interactive Dating Game has it all: wit, laughter, entertainment - and a matchmaking like you´ve never experienced before. Join us, ask yourself /"Who is your Herzblatt?/" and enjoy the show." />
     <meta property="og:site_name" content="The Startup Dating Game - Startups meet VCs meet CTOs" />
 
