--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:creator" content="@koos">
     <meta name="twitter:title" content="The Startup Dating Game - Startups meet VCs meet CTOs">
     <meta name="twitter:description" content="Meet your CTO! Meet your Startup! Meet your VC! Take three ambitious startups, let them pitch to one successful VC, hidden behind a wall ... and watch the magic happen! The Interactive Dating Game has it all: wit, laughter, entertainment - and a matchmaking like you´ve never experienced before. Join us, ask yourself /"Who is your Herzblatt?/" and enjoy the show.">
-    <meta name="twitter:image:src" content="https://interactivedatinggame.com/images/preview.png">
+    <meta name="twitter:image:src" content="http://interactivedatinggame.com/images/preview.png">
 
     <meta property="og:title" content="The Startup Dating Game - Startups meet VCs meet CTOs" />
     <meta property="og:type" content="website" />
