--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <div class='banner'>
-      <img src='images/banner-toa.png'/>
+      <!-- <img src='images/banner-toa.png'/> -->
     </div>
     <header>
       <div id='particles_wrapper'>
@@ -147,19 +147,19 @@
             <div class='next-dates-box'>
                 <div class='next-dates'>
                     <h2>Next Event</h2><p class='dotline'></p>
-                    <h3>March 2015</h3>
-                    <h3>SXSW</h3>
+                    <h3>Friday, March 13 3:30PM - 4:30PM</h3>
+                    <h3>Hilton Austin Downtown, Salon K, 500 E 4th St</h3>
                     <p>Austin, TX, USA</p>
                     <p class='dotline'></p>
                 </div>
             </div>
-            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:450px;width:100%;"><div id="gmap_canvas" style="height:450px;width:100%;"></div><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">www.map-embed.com</a><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(30.2649032,-97.7394217),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(30.2649032,-97.7394217)});infowindow = new google.maps.InfoWindow({content:"<b>Austin</b><br/>TX<br/>USA" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:450px;width:100%;"><div id="gmap_canvas" style="height:450px;width:100%;"></div><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">www.map-embed.com</a><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(30.2651646,-97.73809119999999),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(30.2651646,-97.73809119999999)});infowindow = new google.maps.InfoWindow({content:"<b>Hilton Austin Downtown, Salon K, 500 E 4th St</b>Austin, TX, USA" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
           </div>
           <br/>
-          <div class="center"><strong>I'm superexcited to see this on stage! Join TOA!</strong><br/>
+          <div class="center"><strong>I'm superexcited to see this on stage! RSVP!</strong><br/>
           <!-- <a href="http://toaberlin.com/dating-game/"><img src="images/toa-mini.png" /></a> -->
           </div>
-          <div class="center"><a href="http://toaberlin.com/dating-game/">You're a startup or investor? Join the dating game on stage!</a><br/>          
+          <!-- <div class="center"><a href="http://toaberlin.com/dating-game/">You're a startup or investor? Join the dating game on stage!</a><br/>           -->
           <br/>
           <!-- <img alt='TOA Dating Game' src='images/toa-dating-game.png' width="100%"> -->
       </section>
@@ -313,10 +313,10 @@
           <ul class='talks'>
             <li>
               <div class='name'>The irresistible</div>
-              <div class='avatar' style="background-image: url('images/people/vidar.jpg')"></div>
-              <div class='name'>Vidar Andersen</div>
+              <div class='avatar' style="background-image: url('images/people/tobias.jpg')"></div>
+              <div class='name'>Tobias Schiwek</div>
               <div class='handle'>
-                <a href='http://twitter.com/blacktar' target='_blank'>@blacktar</a>
+                <a href='http://twitter.com/TobiasSchiwek' target='_blank'>@TobiasSchiwek</a>
               </div>
               <div class='topic'>The engineman</div>
             </li>
@@ -334,7 +334,7 @@
               </div>
               <div class='topic'>Shieeeet</div>
             </li>
-            <li>
+<!--             <li>
               <div class='name'>Jack's partner</div>
               <div class='avatar' style="background-image: url('images/people/felix.jpg')"></div>
               <div class='name'>Felix Schlebusch</div>
@@ -351,7 +351,7 @@
                 <a href='https://twitter.com/CrowdSourcingDE' target='_blank'>@CrowdSourcingDE</a>
               </div>
               <div class='topic'>The Crowdsourcer</div>
-            </li>
+            </li> -->
           </ul>
         </p>        
         <div class='dottedline'></div>
@@ -359,7 +359,7 @@
           This is the best thing since "The Hoff" brought down the wall. I'm in!<br/>
           <!-- <a href="http://toaberlin.com/dating-game/"><img src="images/toa-mini.png" /></a> -->
         </div>
-        <div class="center"><a href="http://toaberlin.com/dating-game/">You're a startup or investor? Join the dating game on stage!</a><br/>          
+        <!-- <div class="center"><a href="http://toaberlin.com/dating-game/">You're a startup or investor? Join the dating game on stage!</a><br/>           -->
       </section>
       <section class='background' id='background'>
         <div class="dottedline"><h1>Background</h1></div>
@@ -408,7 +408,7 @@
         </div>
         <div class='dottedline'></div>
         <div class="center">
-          Get honest insights @ TOA<br/>
+          Get honest insights @ SXSW<br/>
           <!-- <a href="http://toaberlin.com/dating-game/"><img src="images/toa-mini.png" /></a> -->
         </div>
         <div class='dottedline'><h1>Past Candidates</h1></div>
