add overlay for signup form

--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
       <!-- <img src='images/banner-toa.png'/> -->
     </div>
     <header>
+      <div id='attention_seeker'>
+        <h1>Next event</h1>
+        <p>
+          Best of Rheinland edition on <br/>
+          <strong>June 10th 2015, 7:15pm</strong> at the<br/>
+          INTERACTIVE COLOGNE Festival.
+        </p>
+        <p>
+          You can win a wild card for the<br/>
+          next Best of Rheinland event.
+        </p>
+        <a class='call_to_action' href="http://goo.gl/forms/Xezaq3RlM8">sign up now</a>
+      </div>
       <div id='particles_wrapper'>
         <div id='particles'></div>
       </div>
