--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="The Startup Dating Game - Startups meet VCs meet CTOs">
     <meta itemprop="description" content="Meet your CTO! Meet your Startup! Meet your VC! Take three ambitious startups, let them pitch to one successful VC, hidden behind a wall ... and watch the magic happen! The Interactive Dating Game has it all: wit, laughter, entertainment - and a matchmaking like you´ve never experienced before. Join us, ask yourself /"Who is your Herzblatt?/" and enjoy the show.">
-    <meta itemprop="image" content="http://interactivedatinggame.com/preview.png">
+    <meta itemprop="image" content="http://startupdatinggame.com/preview.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
@@ -21,12 +21,12 @@
     <meta name="twitter:creator" content="@koos">
     <meta name="twitter:title" content="The Startup Dating Game - Startups meet VCs meet CTOs">
     <meta name="twitter:description" content="Meet your CTO! Meet your Startup! Meet your VC! Take three ambitious startups, let them pitch to one successful VC, hidden behind a wall ... and watch the magic happen! The Interactive Dating Game has it all: wit, laughter, entertainment - and a matchmaking like you´ve never experienced before. Join us, ask yourself /"Who is your Herzblatt?/" and enjoy the show.">
-    <meta name="twitter:image:src" content="http://interactivedatinggame.com/images/preview.png">
+    <meta name="twitter:image:src" content="http://startupdatinggame.com/images/preview.png">
 
     <meta property="og:title" content="The Startup Dating Game - Startups meet VCs meet CTOs" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://interactivedatinggame.com/" />
-    <meta property="og:image" content="http://interactivedatinggame.com/images/preview.png" />
+    <meta property="og:url" content="http://startupdatinggame.com/" />
+    <meta property="og:image" content="http://startupdatinggame.com/images/preview.png" />
     <meta property="og:description" content="Meet your CTO! Meet your Startup! Meet your VC! Take three ambitious startups, let them pitch to one successful VC, hidden behind a wall ... and watch the magic happen! The Interactive Dating Game has it all: wit, laughter, entertainment - and a matchmaking like you´ve never experienced before. Join us, ask yourself /"Who is your Herzblatt?/" and enjoy the show." />
     <meta property="og:site_name" content="The Startup Dating Game - Startups meet VCs meet CTOs" />
 
@@ -135,7 +135,8 @@
         </ul>
         <p>Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
         Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. A direct analog synthesis (DAS) of efficiency, humor and entertainment.</p>
-        <iframe width="100%" height="400" src="//www.youtube.com/embed/rvmABIgk2qk" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="500" src="https://www.youtube.com/embed/zUAeCUN86w4" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/rvmABIgk2qk" frameborder="0" allowfullscreen></iframe>
         <img width="380" alt='Dating Game @ SXSW 2014' src='images/sxsw-2014/IMG_20140310_133419.jpg'>
         <img width="380" alt='Dating Game @ SXSW 2014' src='images/sxsw-2014/IMG_20140310_135637.jpg'>
       </section>
@@ -147,13 +148,13 @@
             <div class='next-dates-box'>
                 <div class='next-dates'>
                     <h2>Next Event</h2><p class='dotline'></p>
-                    <h3>Friday, March 13 3:30PM - 4:30PM</h3>
-                    <h3>Hilton Austin Downtown, Salon K, 500 E 4th St</h3>
-                    <p>Austin, TX, USA</p>
+                    <h3>Wednesday, June 10 7:25PM</h3>
+                    <h3>IHK Köln</h3>
+                    <h3>Cologne, Germany</h3>
                     <p class='dotline'></p>
                 </div>
             </div>
-            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:450px;width:100%;"><div id="gmap_canvas" style="height:450px;width:100%;"></div><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">www.map-embed.com</a><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(30.2651646,-97.73809119999999),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(30.2651646,-97.73809119999999)});infowindow = new google.maps.InfoWindow({content:"<b>Hilton Austin Downtown, Salon K, 500 E 4th St</b>Austin, TX, USA" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+            <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:450px;width:100%;"><div id="gmap_canvas" style="height:450px;width:100%;"></div><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">www.map-embed.com</a><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(50.942806,6.9511380000000145),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(50.942806,6.9511380000000145)});infowindow = new google.maps.InfoWindow({content:"<b>IHK Köln</b>Cologne, Germany" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
           </div>
           <br/>
           <div class="center"><strong>I'm superexcited to see this on stage! RSVP!</strong><br/>
@@ -312,49 +313,16 @@
         <p>
           <ul class='talks'>
             <li>
-              <div class='name'>The irresistible</div>
-              <div class='avatar' style="background-image: url('images/people/tobias.jpg')"></div>
-              <div class='name'>Tobias Schiwek</div>
+              <div class='name'>Miss Confetti</div>
+              <div class='avatar' style="background-image: url('images/people/feli.jpg')"></div>
+              <div class='name'>Felicitas Hackmann</div>
               <div class='handle'>
-                <a href='http://twitter.com/TobiasSchiwek' target='_blank'>@TobiasSchiwek</a>
+                <a href='http://twitter.com/Frau_Feli' target='_blank'>@Frau_Feli</a>
               </div>
-              <div class='topic'>The engineman</div>
+              <div class='topic'>Colors and Confetti</div>
             </li>
           </ul>
         </p>
-        <div class='dottedline'><h1>Brought to you by</h1></div>
-        <p>
-          <ul class='talks'>
-            <li>
-              <div class='name'>Jack of all trades</div>
-              <div class='avatar' style="background-image: url('images/people/koos.jpg')"></div>
-              <div class='name'>Jan Kus</div>
-              <div class='handle'>
-                <a href='http://twitter.com/koos' target='_blank'>@koos</a>
-              </div>
-              <div class='topic'>Shieeeet</div>
-            </li>
-<!--             <li>
-              <div class='name'>Jack's partner</div>
-              <div class='avatar' style="background-image: url('images/people/felix.jpg')"></div>
-              <div class='name'>Felix Schlebusch</div>
-              <div class='handle'>
-                <a href='https://twitter.com/FelixSchlebusch' target='_blank'>@FelixSchlebusch</a>
-              </div>
-              <div class='topic'>The empathic brain</div>
-            </li>
-            <li>
-              <div class='name'>Jack's partner</div>
-              <div class='avatar' style="background-image: url('images/people/claudia.png')"></div>
-              <div class='name'>Claudia Pelzer</div>
-              <div class='handle'>
-                <a href='https://twitter.com/CrowdSourcingDE' target='_blank'>@CrowdSourcingDE</a>
-              </div>
-              <div class='topic'>The Crowdsourcer</div>
-            </li> -->
-          </ul>
-        </p>        
-        <div class='dottedline'></div>
         <div class="center">
           This is the best thing since "The Hoff" brought down the wall. I'm in!<br/>
           <!-- <a href="http://toaberlin.com/dating-game/"><img src="images/toa-mini.png" /></a> -->
@@ -414,6 +382,70 @@
         <div class='dottedline'><h1>Past Candidates</h1></div>
         <p>
           <ul class='talks'>
+            <li>
+              <div class='name'>Maple Apps</div>
+              <div class='avatar' style="background-image: url('images/people/arne-horn.jpg')"></div>
+              <div class='name'>Arne Horn</div>
+              <div class='handle'>
+                <a href='https://www.linkedin.com/in/hornarne' target='_blank'>LinkedIn</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>500 Startups</div>
+              <div class='avatar' style="background-image: url('images/people/parker-thompson.jpg')"></div>
+              <div class='name'>Parker Thompson</div>
+              <div class='handle'>
+                <a href='https://www.linkedin.com/in/parkert' target='_blank'>LinkedIn</a>
+              </div>
+            </li>  
+            <li>
+              <div class='name'>Uberchord Engineering</div>
+              <div class='avatar' style="background-image: url('images/people/simon.jpg')"></div>
+              <div class='name'>Simon Barkow-Oesterreicher</div>
+              <div class='handle'>
+                <a href='https://www.linkedin.com/in/ubersimon' target='_blank'>LinkedIn</a>
+              </div>
+            </li> 
+            <li>
+              <div class='name'>WERK1 München</div>
+              <div class='avatar' style="background-image: url('images/people/franz-glatz.jpg')"></div>
+              <div class='name'>Franz Glatz</div>
+              <div class='handle'>
+                <a href='https://www.linkedin.com/in/fglatz' target='_blank'>LinkedIn</a>
+              </div>
+            </li> 
+            <li>
+              <div class='name'>Transitmix</div>
+              <div class='avatar' style="background-image: url('images/people/tiffany-chu-tweet.jpg')"></div>
+              <div class='name'>Tiffany Chu</div>
+              <div class='handle'>
+                <a href='https://twitter.com/tchu88' target='_blank'>@tchu88</a>
+              </div>
+            </li> 
+            <li>
+              <div class='name'>Lufthansa Innovation Hub</div>
+              <div class='avatar' style="background-image: url('images/people/sebastian-herzog.jpg')"></div>
+              <div class='name'>Sebastian Herzog</div>
+              <div class='handle'>
+                <a href='https://www.linkedin.com/in/sebastianherzog' target='_blank'>LinkedIn</a>
+              </div>
+            </li>  
+            <li>
+              <div class='name'>bubble it!</div>
+              <div class='avatar' style="background-image: url('images/people/tim-betzin.jpg')"></div>
+              <div class='name'>Tim Betzin</div>
+              <div class='handle'>
+                <a href='https://www.linkedin.com/pub/tim-betzin/22/521/a7' target='_blank'>LinkedIn</a>
+              </div>
+            </li> 
+            <li>
+              <div class='name'>AstroPrint</div>
+              <div class='avatar' style="background-image: url('images/people/drew-taylor.jpg')"></div>
+              <div class='name'>Drew Taylor</div>
+              <div class='handle'>
+                <a href='https://www.linkedin.com/pub/drew-taylor/6a/522/7bb' target='_blank'>LinkedIn</a>
+              </div>
+            </li>                                                                                    
             <li>
               <div class='name'>Point Nine</div>
               <div class='avatar' style="background-image: url('images/people/christoph-jenz.jpg')"></div>
@@ -676,6 +708,15 @@
         <div class='dottedline'><h1>Past Hosts</h1></div>
           <ul class='talks'>
             <li>
+              <div class='name'>FanCaptain</div>
+              <div class='avatar' style="background-image: url('images/people/tobias.jpg')"></div>
+              <div class='name'>Tobias Schiwek</div>
+              <div class='handle'>
+                <a href='http://twitter.com/TobiasSchiwek' target='_blank'>@tobiasschiwek</a>
+              </div>
+              <div class='topic'>The German</div>
+            </li>
+            <li>
               <div class='name'>Editor-At-Large</div>
               <div class='avatar' style="background-image: url('images/people/mikeb.png')"></div>
               <div class='name'>Mike Butcher</div>
@@ -722,13 +763,8 @@
       </section>  -->
       <section class='copyright'>
         <div class='dottedline'></div>
-        <a href='mailto:jan@interactive-cologne.com' target='_blank'>Questions?</a><br/><br/>
+        <a href='mailto:jan@hack.institute' target='_blank'>Questions?</a><br/><br/>
         Proudly brought to you by <a href='http://ufa-lab.com' target='_blank'><img src="images/ufa-lab-logo.png" alt="UFA Lab" style="vertical-align: middle; padding: 0 5px 10px 5px;" /></a> &amp; <a href='http://railslove.com' target='_blank'><img src="images/railslove-logo.png" alt="railslove" style="vertical-align: middle; padding: 0 5px 10px 5px;" /></a> &amp; <a href='http://hack.institute' target='_blank'><img src="images/hack-institute.jpg" alt="Hack.Institute" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a><br/><br/>
-        Supported by
-
-        <a href="http://www.creative.nrw.de/" target="_blank"><img src="images/creative-nrw.png" alt="CREATIVE NRW" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a> &amp;
-        <a href="http://www.supr.com/" target="_blank"><img src="images/supr.png" alt="supr.com" style="vertical-align: middle; padding: 0 5px 5px 5px;" /></a>
-        <br /><br/>
         Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a><br /><br/>
       </section>
 
@@ -739,7 +775,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-47787406-1', 'interactivedatinggame.com');
+      ga('create', 'UA-47787406-1', 'startupdatinggame.com');
       ga('send', 'pageview');
 
     </script>
