--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div id='attention_seeker'>
         <h1>Next event</h1>
         <p>
-          Best of Rheinland edition on <br/>
+          Best of Rhineland edition on <br/>
           <strong>June 10th 2015, 7:15pm</strong> at the<br/>
           INTERACTIVE COLOGNE Festival.
         </p>
