--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         </p>
         <p>
           You can win a wild card for the<br/>
-          next Best of Rheinland event.
+          next Best of Rheinland event.<br/>
+          <strong>Your host <a style="color:#fff" href="http://twitter.com/Frau_Feli">@Frau_Feli</a></strong>
         </p>
         <a class='call_to_action' href="http://goo.gl/forms/Xezaq3RlM8">sign up now</a>
       </div>
