updated the next show

--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
       <div id='attention_seeker'>
         <h1>Next event</h1>
         <p>
-          Best of Rhineland edition on <br/>
-          <strong>June 10th 2015, 7:15pm</strong> at the<br/>
+          on <br/>
+          <strong>August 16th 2017, 7:00pm</strong> at the<br/>
           INTERACTIVE COLOGNE Festival.
         </p>
         <p>
-          You can win a wild card for the<br/>
-          next Best of Rheinland event.<br/>
-          <strong>Your host <a style="color:#fff" href="http://twitter.com/Frau_Feli">@Frau_Feli</a></strong>
+          You can win a romantic dinner<br/>
+          with your VC/Startup Herzblatt.<br/>
+          Your host the one and only<br/>
+          <strong>SUSI</a></strong>
         </p>
         <a class='call_to_action' href="http://goo.gl/forms/Xezaq3RlM8">sign up now</a>
       </div>
@@ -162,7 +163,7 @@
             <div class='next-dates-box'>
                 <div class='next-dates'>
                     <h2>Next Event</h2><p class='dotline'></p>
-                    <h3>Wednesday, June 10 7:25PM</h3>
+                    <h3>Wednesday, August 16 7:00PM</h3>
                     <h3>IHK Köln</h3>
                     <h3>Cologne, Germany</h3>
                     <p class='dotline'></p>
@@ -261,43 +262,6 @@
             </li>
           </ul>
         </p>
-        <h2 id="round1">Round 3 - VC dates Founder</h2>
-        <p>
-          <ul class='talks candidates'>
-            <li>
-              <div class='name'>The Investor</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/investor2.png')"></div>
-<!--               <div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
-              <div class='handle'>
-                <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
-              </div> -->
-            </li>
-            <li>
-              <div class='name'>Awesome Founder</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder1.png')"></div>
-              <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
-              <div class='handle'>
-                <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
-              </div>-->
-            </li>
-            <li>
-              <div class='name'>Another Founder</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder2.png')"></div>
-              <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
-              <div class='handle'>
-                <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
-              </div>-->
-            </li>
-            <li>
-              <div class='name'>Another Founder</div>
-              <div class='avatar' style="background-image: url('images/people-placeholder/founder3.png')"></div>
-              <!--<div class='name'>Name - <a href="http://www.example.com/">Link</a></div>
-              <div class='handle'>
-                <a href='http://twitter.com/' target='_blank'>@twitter handle</a>
-              </div>-->
-            </li>
-          </ul>
-        </p>
         <!--
         <div class='dottedline'><h1>Prizes...</h1></div>
         <p>
@@ -327,13 +291,10 @@
         <p>
           <ul class='talks'>
             <li>
-              <div class='name'>Miss Confetti</div>
-              <div class='avatar' style="background-image: url('images/people/feli.jpg')"></div>
-              <div class='name'>Felicitas Hackmann</div>
-              <div class='handle'>
-                <a href='http://twitter.com/Frau_Feli' target='_blank'>@Frau_Feli</a>
-              </div>
-              <div class='topic'>Colors and Confetti</div>
+              <div class='name'>Mr. Carell</div>
+              <div class='avatar' style="background-image: url('images/people/felix_new.jpg')"></div>
+              <div class='name'>Felix Schlebusch</div>
+              <div class='topic'>Girls</div>
             </li>
           </ul>
         </p>
