added signup form

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           Your host the one and only<br/>
           <strong>SUSI</a></strong>
         </p>
-        <a class='call_to_action' href="http://goo.gl/forms/Xezaq3RlM8">sign up now</a>
+        <a class='call_to_action' href="https://hckn.st/2tYEnTF">sign up now</a>
       </div>
       <div id='particles_wrapper'>
         <div id='particles'></div>
