added new event

--- a/index.html
+++ b/index.html
@@ -50,16 +50,15 @@
         <h1>Next event</h1>
         <p>
           on <br/>
-          <strong>August 16th 2017, 7:00pm</strong> at the<br/>
-          INTERACTIVE COLOGNE Festival.
+          <strong>March 2021</strong> at the<br/>
+          SXSW 2021
         </p>
         <p>
-          You can win a romantic dinner<br/>
-          with your VC/Startup Herzblatt.<br/>
-          Your host the one and only<br/>
-          <strong>SUSI</a></strong>
+          VOTE FOR US!<br/>
+          SXSXW PANELPICKER<br/>
+          2021<br/>
         </p>
-        <a class='call_to_action' href="https://hckn.st/2tYEnTF">sign up now</a>
+        <a class='call_to_action' href="https://panelpicker.sxsw.com/vote/109852">VOTE FOR US</a>
       </div>
       <div id='particles_wrapper'>
         <div id='particles'></div>
